--- a/movie_website/assets/style.css
+++ b/movie_website/assets/style.css
@@ -10,25 +10,26 @@
     height: 100vh;
     background-color:black; 
     font-family: 'Poppins', sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+   /* display: flex;  */
+    align-items: center; 
+    justify-content: center; 
     color: white;
+    overflow: hidden;
 }
 
 
 
 header {
-    
     position: relative;
-    width: 90%;
-    height: 90%;
+    width: 80%;
+    height: 80%;
     /* border:1px solid white; */
     border-radius: 20px;
     overflow: hidden;
-    box-shadow: 0px 0px 25px -8px #7bb314;
+    box-shadow: 0px 0px 25px -2px #7bb314;
     overflow: auto;
     background-color: rgb(40, 38, 38);
+   
 }
 header::-webkit-scrollbar{
     width: 5px;
@@ -67,11 +68,11 @@ header::after{
 nav{
 
     width: 100%;
-    height: 10%;
-    /* border: 1px solid white; */
+    height: 20%;
+    /* border: 1px solid white; */ 
     display: flex;
     align-items: center;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     /* padding: 0 50px; */
 }
 
@@ -82,9 +83,9 @@ nav{
 
 nav .input_search input{
     position: relative;
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
     border-radius: 20px;
     border: none;
     outline: none;
@@ -107,11 +108,11 @@ nav .input_search input::placeholder{
     
 }
 
-header main .row .card{
+header  .row .card{
     background-color: #2b3c0c;
     color:white;
     border-radius: 10px;
 }
-header main .row .card .img{
+header  .row .card .img{
     border-radius: 20px;
 }
