--- a/movie_website/assets/details.css
+++ b/movie_website/assets/details.css
@@ -11,13 +11,13 @@ body{
     height: 100vh;
     background-color: black;
     /* background: url('./imgs/bg-2.jpg')no-repeat center center/cover; */
-
     font-family: 'Playfair Display', serif;
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
-    overflow: auto;
+    overflow: hidden;
+    /* overflow: auto; */
 
 }
 
@@ -27,21 +27,15 @@ header{
     height: 90%;
     /* border: 1px solid white; */
     border-radius: 20px;
-    /* overflow: hidden; */
+    overflow: hidden;
     box-shadow: 0px 0px 25px -1px black ;
-    overflow: auto;
+    /* overflow: auto; */
     background: url('./imgs/bg-2.jpg')no-repeat center center/cover;
     opacity: .9;
     z-index: -1;
-   
 }
-header::before{
-   content: '';
-   position: absolute;
-   width: 100%;
-   height:100%;
 
-}
+
 
 header::-webkit-scrollbar{
     width: 5px;
@@ -50,23 +44,36 @@ header::-webkit-scrollbar{
     visibility: hidden ;
 
 }
-header::-webkit-scrollbar-thumb{
+ header::-webkit-scrollbar-thumb{
     width: 5px;
     background: rgb(255,255,255,.3);
     border-radius: 5px;
     visibility: hidden ;
 
-}
-
+} 
+header::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height:100%;
+ 
+ }
 
 header .image{
-    border-radius: 20px;
-    
+    border-radius: 30px;
 }
+
 header .trailer{
     top:200px;
     width:200px;
+    height:25px;
     border-radius: 20px;
     background: rgba(74, 70, 70);
+    border: 0;
 
+}
+
+a{
+    color:white;
+    text-decoration: none;
 }
