--- a/movie_website/assets/details.css
+++ b/movie_website/assets/details.css
@@ -77,3 +77,9 @@ a{
     color:white;
     text-decoration: none;
 }
+
+.rating{
+    background-color:rgb(7, 83, 7);
+    width: 80px;
+    padding-left: 4px;
+}
