--- a/movie_website/assets/style.css
+++ b/movie_website/assets/style.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 * {
     padding: 0%;
@@ -10,17 +9,13 @@
     width: 100%;
     height: 100vh;
     background-color:black; 
-    /* font-family: 'Poppins', sans-serif;
-     */
     font-family: 'Playfair Display', serif;
-   /* display: flex;  */
     align-items: center; 
     justify-content: center; 
     color: white;
     overflow: hidden;
+
 }
-
-
 
 header {
     position: relative;
@@ -28,12 +23,13 @@ header {
     height: 80%;
     /* border:1px solid white; */
     border-radius: 20px;
-    /* overflow: hidden; */
+    overflow: hidden;
     box-shadow: 0px 0px 25px -2px #7bb314;
     overflow: auto;
     background-color: rgb(40, 38, 38);
-   
+
 }
+
 header::-webkit-scrollbar{
     width: 5px;
     background: rgb(255,255,255,.3);
@@ -41,6 +37,7 @@ header::-webkit-scrollbar{
     visibility: hidden ;
 
 }
+
 header::-webkit-scrollbar-thumb{
     width: 5px;
     background: rgb(255,255,255,.3);
@@ -49,15 +46,12 @@ header::-webkit-scrollbar-thumb{
 
 }
 
-
 header::before{
     content: '';
     position: absolute;
     width: 100%;
     height:100%;
-    /* background: url('/assets/imgs/bg.jpg')no-repeat center center/cover; */
-    /* opacity: .9;
-    z-index: -1; */
+   
 }
 
 header::after{
@@ -69,15 +63,15 @@ header::after{
 }
 
 nav{
-
     width: 100%;
     height: 20%;
-    /* border: 1px solid white; */ 
+    /* border: 1px solid white;  */
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* padding: 0 50px; */
+
 }
+
 .flixzet .flix{
     color:white
 }
@@ -89,9 +83,6 @@ nav{
 
 nav .input_search input{
     position: relative;
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
     border-radius: 20px;
     border: none;
     outline: none;
@@ -100,11 +91,13 @@ nav .input_search input{
     color: black;
     margin-right: 10px;
 }
+
 nav .input_search input::placeholder{
     color:black;
     
 }
- nav .input_search img{
+
+nav .input_search img{
     width:20px;
     height:20px;
     border-radius: 50%;
@@ -114,21 +107,19 @@ nav .input_search input::placeholder{
     
 }
 
-
 header  .row .card{
     background-color: #2b3c0c;
     color:white;
     border-radius: 10px;
 }
+
 header  .row .card .img{
     border-radius: 20px;
-    /* opacity: 0.7; */
-}
-header  .row .card .img:hover{
-  filter:contrast();
-  /* opacity:; */
 }
 
+header  .row .card .img:hover{
+  filter:contrast();
+}
 
 header .row button {
     opacity: 0;
@@ -148,20 +139,7 @@ header .row button {
     transition: opacity .3s;
 }
 
-/* .card .card-title.hide{
-    display:none;
-} */
-
-/* .input_search{
-    background-color: var(--md-dark-color);
-    height: 180px;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-} */
-
 .toggle{
-    /* padding-left: px; */
     width: 40px;
     height: 20px;
     background-color: white;
@@ -171,9 +149,11 @@ header .row button {
     justify-content: space-around;
     position: relative;
 }
+
 .toggle-icon{
     color: goldenrod;
 }
+
 .toggle-ball{
     width: 18px;
     height: 18px;
@@ -187,6 +167,7 @@ header .row button {
     background-color: white;
     color:black;
 }
+
 header.active{
     background-color: rgb(95, 94, 94);
 }
@@ -194,6 +175,7 @@ header.active{
 .flix.active{
     color:black;
 }
+
 .input_search input.active{
     color:black;
     background: gray;
@@ -202,7 +184,9 @@ header.active{
 .toggle.active{
     background-color: black;
 }
+
 .toggle-ball.active{
     background-color: white;
     transform:translateX(20px);
 }
+
