--- a/movie_website/assets/details.css
+++ b/movie_website/assets/details.css
@@ -8,8 +8,8 @@
 body{
     width: 100%;
     height: 100vh;
-    background-color: black;
-    /* background: url('./imgs/bg-2.jpg')no-repeat center center/cover; */
+    /* background-color: black; */
+    background: url('./imgs/bg-2.jpg')no-repeat center center/cover;
     font-family: 'Playfair Display', serif;
     display: flex;
     align-items: center;
